src/test/ui/parser/issue-14303-struct.stderr
error: lifetime parameters must be declared prior to type parameters
  --> $DIR/issue-14303-struct.rs:3:17
   |
LL | struct X<'a, T, 'b> {
   |                 ^^
help: move the lifetime parameter prior to the first type parameter
   |
LL | struct X<'a, 'b, T> {
   |              ^^^ --

error: aborting due to previous error

